--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -44,5 +46,9 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://juuuuuuuuuuuuuu.github.io/instagram"
+  "homepage": "https://juuuuuuuuuuuuuu.github.io/instagram",
+  "devDependencies": {
+    "@babel/preset-react": "^7.13.13",
+    "@emotion/babel-plugin": "^11.3.0"
+  }
 }
