--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     {
       "src": "/public/favicon.jpeg",
       "type": "image/jpeg",
-      "sizes": "255"
+      "sizes": "255x255"
     }
   ],
   "start_url": "/?source=pwa",
