--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "sizes": "255x255"
     }
   ],
-  "start_url": "/?source=pwa",
+  "start_url": "/instagram/#/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
